NU-19 comment: fixed color option size on mobile en_US store

--- a/app/design/frontend/Bangkok/default/Magento_Theme/web/css/source/_module.less
+++ b/app/design/frontend/Bangkok/default/Magento_Theme/web/css/source/_module.less
@@ -479,7 +479,6 @@
     .points-container .bottom-points-block,
     .products-grid.wishlist .product-item .box-tocart .fieldset .field.qty .label,
     .products-grid.wishlist .product-item .box-tocart .message-count-in-stock span,
-    .cart.table-wrapper .col.qty span,
     .order-items.table-wrapper
     .col.qty span,
     .cart.table-wrapper .col.subtotal span,
@@ -499,6 +498,10 @@
     .account-right-block .sign-in-block a.action.login
      {
       font-size: 1.9rem;
+      font-family: 'Thai Regular';
+    }
+    .cart.table-wrapper .col.qty span {
+      font-size: 1.4rem;
       font-family: 'Thai Regular';
     }
     // nustories
